2010-02-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\tex): call \mathactive, so that the
	math-active ' gets plain's definition to generate a prime, instead
	of infinitely looping on the ' character.
	Report from Brian Gough, 11 Feb 2010 10:54:24.

2010-02-09  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_tex4ht): only run tex4ht if we're outputting
	HTML.  Report from Wybo Dekker, 08 Feb 2010 11:53:58.

2010-02-06  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_bibtex): ensure output from all greps
	in chain are redirected, else undefined output from a LaTeX \cite
	shows up even with --quiet.
	From Wybo Dekker, 06 Feb 2010 13:33:48.
	
	* util/texi2dvi: untabify.

2010-01-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Two Arguments): blank line consistency.

2010-01-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (exampleindent): no longer ignored in HTML.
	Report from Thomas Keller, 20 Nov 2009 07:59:41.

2010-01-01  Robert Millan  <rmh.grub@aybabtu.com>  (tiny change)

	* util/gendocs.sh: use `set -e'.

2009-12-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Image Syntax): mention convention for installing
	images for use by capable Info readers (i.e., Emacs Info).
	Suggested by Jose Marchesi.

2009-10-26  Roland Kaufmann  <roland.kaufmann@gmail.com>  (tiny change)

	* util/texi2dvi (max-iterations): new option.

2009-10-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Predefined Indices): insert @findex entries
	for the indexing commands (cindex, findex, etc.).
	From Kevin Ryde, 17 Oct 2009 10:03:14.

	* info/filesys.c (compress_suffixes): use gzip -d in preference to
	gunzip.  From Antonio Diaz Diaz, 22 Oct 2009 17:42:34.

2009-10-08  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (catcode_special): default to maybe,
	and only set to true for processing Texinfo, not LaTeX.
	Request from Kurt Hornik, also Debian bug #534458.

2009-09-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
